--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "vue-project",
+  "name": "todo-vue",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.8",
+    "@quasar/extras": "^1.16.11",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.0",
     "pinia": "^2.1.7",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "quasar": "^2.16.4",
+    "vite-plugin-vue-devtools": "^7.2.1",
+    "vue": "^3.3.4",
+    "vue-router": "^4.3.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.1.6"
+    "@quasar/vite-plugin": "^1.7.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.33.0",
+    "vite": "^4.3.9"
   }
 }
